fix clipped logos on mobile

--- a/src/components/App/Routes/Home/Teams/styles.scss
+++ b/src/components/App/Routes/Home/Teams/styles.scss
@@ -91,4 +91,8 @@
   line-height: 1.6em;
   margin-bottom: 0;
 }
+
+.teamlogocontainer, .logocontainer, .logocontainer > img {
+  height: 150px;
+}
 }
